@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 1.00'
+generated_by: 'Module::Install version 1.01'
 license: gpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,7 +23,8 @@ requires:
   Nagios::Plugin::Range: 0
   Nagios::Plugin::Threshold: 0
   Readonly: 0
+  perl: 5.8.0
   version: 0
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 2.2.3
+version: 2.2.4
